// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-tree no categories should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;

exports[`write-tree no categories should write an empty website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"]
  }
}
"
`;

exports[`write-tree one category, one page with image example should write a category/page.md file using the page template 1`] = `
"---
id: page
title: Category > Page
sidebar_label: Page
---

> Page description.

- **Tested on macOS**: Catalina
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page -bool true
\`\`\`
<img src=\\"/docs/assets/category/page/true.png\\" alt=\\"Example output with value set to true\\"
  width=\\"600\\" height=\\"400\\" style=\\"height: auto\\" />


## Set to \`false\`
\`\`\`bash
defaults write com.apple.category page -bool false
\`\`\`
<img src=\\"/docs/assets/category/page/false.png\\" alt=\\"Example output with value set to false\\"
  width=\\"400\\" height=\\"200\\" style=\\"height: auto\\" />


## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with image example should write a website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"],
    \\"Category\\": [\\"category/page\\"]
  }
}
"
`;

exports[`write-tree one category, one page with image example should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with text and possible values example should write a category/page.md file using the page template 1`] = `
"---
id: page
title: Category > Page
sidebar_label: Page
---

> Page description.

- **Tested on macOS**: Catalina
- **Parameter type**: string
  * start
  * middle
  * end

## Set to \`start\`
\`\`\`bash
defaults write com.apple.category page -string start
\`\`\`

- output when value is start

## Set to \`middle\` (default value)
\`\`\`bash
defaults write com.apple.category page -string middle
\`\`\`

- output when value is middle

## Set to \`end\`
\`\`\`bash
defaults write com.apple.category page -string end
\`\`\`

- output when value is end

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with text and possible values example should write a website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"],
    \\"Category\\": [\\"category/page\\"]
  }
}
"
`;

exports[`write-tree one category, one page with text and possible values example should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with text examples with an after command should write a category/page.md file using the page template 1`] = `
"---
id: page
title: Category > Page
sidebar_label: Page
---

> Page description.

- **Tested on macOS**: Catalina
- **Parameter type**: string

## Set to \`~/Desktop\` (default value)
\`\`\`bash
defaults write com.apple.category page -string ~/Desktop && killall App
\`\`\`

- output when value is ~/Desktop

## Set to \`~/Pictures\`
\`\`\`bash
defaults write com.apple.category page -string ~/Pictures && killall App
\`\`\`

- output when value is ~/Pictures

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page && killall App
\`\`\`
"
`;

exports[`write-tree one category, one page with text examples with an after command should write a website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"],
    \\"Category\\": [\\"category/page\\"]
  }
}
"
`;

exports[`write-tree one category, one page with text examples with an after command should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with text examples with requirements should write a category/page.md file using the page template 1`] = `
"---
id: page
title: Category > Page
sidebar_label: Page
---

> Page description.

- **Tested on macOS**: Catalina
- **Parameter type**: string

## Requirements
- [\`com.apple.category2 another-key\`](../another-category/another-key#set-to-true) must be set to \`true\`
- [\`com.apple.category2 a-third-key\`](../a-third-category/a-third-key#set-to-0.5) must be set to \`0.5\`

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page -string true && killall App
\`\`\`

- output when value is true

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category page -string false && killall App
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page && killall App
\`\`\`
"
`;

exports[`write-tree one category, one page with text examples with requirements should write a website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"],
    \\"Category\\": [\\"category/page\\"]
  }
}
"
`;

exports[`write-tree one category, one page with text examples with requirements should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with text examples with special chars values should write a category/page.md file using the page template 1`] = `
"---
id: page
title: Category > Page
sidebar_label: Page
---

> Page description.

- **Tested on macOS**: Catalina
- **Parameter type**: string

## Set to \`~/Desktop\` (default value)
\`\`\`bash
defaults write com.apple.category page -string ~/Desktop
\`\`\`

- output when value is ~/Desktop

## Set to \`~/Pictures\`
\`\`\`bash
defaults write com.apple.category page -string ~/Pictures
\`\`\`

- output when value is ~/Pictures

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with text examples with special chars values should write a website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"],
    \\"Category\\": [\\"category/page\\"]
  }
}
"
`;

exports[`write-tree one category, one page with text examples with special chars values should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with video example should write a category/page.md file using the page template 1`] = `
"---
id: page
title: Category > Page
sidebar_label: Page
---

> Page description.

- **Tested on macOS**: Catalina
- **Parameter type**: float

## Set to \`0\` (default value)
\`\`\`bash
defaults write com.apple.category page -float 0
\`\`\`
<video autoplay loop muted playsinline width=\\"750\\" height=\\"400\\" style=\\"max-width: 100%; height: auto\\">
  <source src=\\"/docs/assets/category/page/0.mp4\\" type=\\"video/mp4\\">
  Example output with value set to 0
</video>


## Set to \`0.5\`
\`\`\`bash
defaults write com.apple.category page -float 0.5
\`\`\`
<video autoplay loop muted playsinline width=\\"720\\" height=\\"390\\" style=\\"max-width: 100%; height: auto\\">
  <source src=\\"/docs/assets/category/page/0.5.mp4\\" type=\\"video/mp4\\">
  Example output with value set to 0.5
</video>


## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with video example should write a website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"],
    \\"Category\\": [\\"category/page\\"]
  }
}
"
`;

exports[`write-tree one category, one page with video example should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;

exports[`write-tree one category, two pages should write a category/page1.md file using the page template 1`] = `
"---
id: page1
title: Category > Page 1
sidebar_label: Page 1
---

> Page 1 description.

- **Tested on macOS**: Catalina
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page1 -bool true
\`\`\`

- output when value is true

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category page1 -bool false
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category page1
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page1
\`\`\`
"
`;

exports[`write-tree one category, two pages should write a category/page2.md file using the page template 1`] = `
"---
id: page2
title: Category > Page 2
sidebar_label: Page 2
---

> Page 2 description.

- **Tested on macOS**: Catalina
- **Parameter type**: bool

## Set to \`true\`
\`\`\`bash
defaults write com.apple.category page2 -bool true
\`\`\`

- output when value is true

## Set to \`false\` (default value)
\`\`\`bash
defaults write com.apple.category page2 -bool false
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category page2
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page2
\`\`\`
"
`;

exports[`write-tree one category, two pages should write a website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"],
    \\"Category\\": [\\"category/page1\\", \\"category/page2\\"]
  }
}
"
`;

exports[`write-tree one category, two pages should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page 1](category/page1)
- [Page 2](category/page2)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;

exports[`write-tree two categories, one page in each should write a category1/page.md file using the page template 1`] = `
"---
id: page
title: Category 1 > Page
sidebar_label: Page
---

> Page description.

- **Tested on macOS**: Catalina
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category1 page -bool true
\`\`\`

- output when value is true

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category1 page -bool false
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category1 page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category1 page
\`\`\`
"
`;

exports[`write-tree two categories, one page in each should write a category2/page.md file using the page template 1`] = `
"---
id: page
title: Category 2 > Page
sidebar_label: Page
---

> Page description.

- **Tested on macOS**: Catalina
- **Parameter type**: bool

## Set to \`true\`
\`\`\`bash
defaults write com.apple.category2 page -bool true
\`\`\`

- output when value is true

## Set to \`false\` (default value)
\`\`\`bash
defaults write com.apple.category2 page -bool false
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category2 page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category2 page
\`\`\`
"
`;

exports[`write-tree two categories, one page in each should write a website/sidebars.json file using the sidebars template 1`] = `
"{
  \\"docs\\": {
    \\"Home\\": [\\"index\\"],
    \\"Category 1\\": [\\"category1/page\\"],
    \\"Category 2\\": [\\"category2/page\\"]
  }
}
"
`;

exports[`write-tree two categories, one page in each should write an empty docs/readme.md file using the home template 1`] = `
"---
id: index
title: macOS defaults list
sidebar_label: Home
---

Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category 1
- [Page](category1/page)

## Category 2
- [Page](category2/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [Docusaurus](https://docusaurus.io/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docusaurus#readme) if you want to use it.
"
`;
